# connect4

./: .gitignore  CMakeLists.txt
src/: main.cxx  qml.qrc
src/windows/: main.qml
